[gd_scene load_steps=6 format=3 uid="uid://wnlhcjcm0qc"]

[ext_resource type="Texture2D" uid="uid://q28cdfoueli8" path="res://ui/star_solid.svg" id="1_3hspb"]
[ext_resource type="Script" path="res://ui/victory_panel.gd" id="1_ity2m"]
[ext_resource type="Texture2D" uid="uid://dccvgy7grvwon" path="res://ui/star_regular.svg" id="2_higjn"]
[ext_resource type="Theme" uid="uid://dih34ywnda3er" path="res://ui/victory_panel_theme.tres" id="3_cceb7"]
[ext_resource type="Script" path="res://ui/buttons/back_button/back_button.gd" id="4_i70ng"]

[node name="VictoryPanel" type="PanelContainer"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 325)
script = ExtResource("1_ity2m")
empty_star = ExtResource("2_higjn")
filled_star = ExtResource("1_3hspb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Parabéns![/b][/center]"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Você concluiu esse nível![/center]"
fit_content = true

[node name="Stars" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Star" type="TextureRect" parent="MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("1_3hspb")
expand_mode = 1
stretch_mode = 4

[node name="Star2" type="TextureRect" parent="MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("1_3hspb")
expand_mode = 1
stretch_mode = 4

[node name="Star3" type="TextureRect" parent="MarginContainer/VBoxContainer/Stars"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_higjn")
expand_mode = 1
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FigureButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_cceb7")
text = "Ver figura"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_cceb7")
text = "Continuar"
script = ExtResource("4_i70ng")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/FigureButton" to="." method="hide_panel"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ContinueButton" to="MarginContainer/VBoxContainer/Buttons/ContinueButton" method="_on_pressed"]
